完成敏感注册及其登录(在设计敏感操作的接口所独有的TokenStr类型)
