# docs/swagger.yaml
@@ -87,6 +87,37 @@ definitions:
       message:
         type: string
     type: object
+  user.sEmailLoginParameter:
+    properties:
+      device_name:
+        description: 登录的设备的名字，浏览器为 “浏览器(ip所在的城市)”
+        example: bob的iPhone
+        type: string
+      email:
+        description: 邮箱
+        example: haha@test.com
+        type: string
+      verificationCode:
+        description: 验证码
+        example: "623597"
+        type: string
+    required:
+    - email
+    - verificationCode
+    type: object
+  user.sEmailRegisterParameter:
+    properties:
+      device_name:
+        description: 登录的设备的名字，浏览器为 “浏览器(ip所在的城市)”
+        example: bob的iPhone
+        type: string
+      email:
+        description: 邮箱
+        example: haha@test.com
+        type: string
+    required:
+    - email
+    type: object
   user_profile.getProfileResponse:
     properties:
       code:
@@ -158,6 +189,33 @@ paths:
           schema:
             $ref: '#/definitions/common.BaseResponse'
       summary: 使用邮箱登陆
+  /user/login/sensitive/email:
+    post:
+      parameters:
+      - description: 参数
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/user.sEmailLoginParameter'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/user.loginResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/common.BaseResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/common.BaseResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: 使用邮箱进行敏感登陆验证, 需要事先登录
   /user/login/username:
     post:
       parameters:
@@ -258,6 +316,33 @@ paths:
           schema:
             $ref: '#/definitions/common.BaseResponse'
       summary: 注册
+  /user/register/sensitive/email:
+    post:
+      parameters:
+      - description: 参数
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/user.sEmailRegisterParameter'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/user.loginResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/common.BaseResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/common.BaseResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: 敏感注册，用于生成验证码等, 需要事先登录
 securityDefinitions:
   ApiKeyAuth:
     in: header
